assets/queries/k8s/network_policy_ingress_not_restricted/test/positive_expected_result.json
[
  {
    "queryName": "Network Policy Ingress Not Restricted",
    "severity": "HIGH",
    "line": 11
  },
  {
    "queryName": "Network Policy Ingress Not Restricted",
    "severity": "HIGH",
    "line": 22
  }
]
